--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
 dependencies {
     compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.2.0')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-data-elasticsearch')
     compile('com.zaxxer:HikariCP:2.4.7')
     compile('org.apache.logging.log4j:log4j-api:2.8.1')
     runtime('mysql:mysql-connector-java')
