--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -1,5 +1,5 @@
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/gtu
+database.url=jdbc:mysql://localhost:3306/gtu?characterEncoding=utf8&useSSL=false
 database.username=root
 database.password=gc
 pool.minPoolSize=20
